mysql_deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: myns
  annotations:
    net.beta.kubernetes.io/network-policy: |
      {
        "ingress": {
          "isolation": "DefaultDeny"
        }
      }
---
kind: NetworkPolicy
apiVersion: extensions/v1beta1 
metadata:
  name: allow-master-to-slave
  namespace: myns
spec:
  podSelector:            
    matchLabels:
      app: "mysql-slave"
  ingress:                
    - from:              
        - podSelector:
            matchLabels:
              app: "mysql-master"
      ports:
        - protocol: TCP
          port: 3306
---

kind: NetworkPolicy
apiVersion: extensions/v1beta1 
metadata:
  name: allow-slave-to-master
  namespace: myns
spec:
  podSelector:            
    matchLabels:
      app: "mysql-master"
  ingress:                
    - from:              
        - podSelector:
            matchLabels:
              app: "mysql-slave"
      ports:
        - protocol: TCP
          port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-master
  namespace: myns
  labels:
    app: mysql-master
spec:
 # ports:
 # - port: 3306
 #   nodePort: 3306
 #   targetPort: 3306
# clusterIP: None
#  clusterIP: 10.32.11.21
  ports:
  - port: 3306
    name: mysql-port
    protocol: TCP
    targetPort: 3306
    nodePort: 30015
  type: NodePort

  selector:
    app: mysql-master
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mysql-master
  namespace: myns
spec:
  serviceName: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-master
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values: 
                    - mysql-slave
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: mysql-ha
        imagePullPolicy: IfNotPresent
        image: daocloud.io/daocloud/mysql-ha
        resources:
          requests:
            memory: "100Mi"
        ports:
        - containerPort: 3306
          name: mysql-all
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mysql-slave
  namespace: myns
spec:
  serviceName: mysql
  replicas: 2
  template:
    metadata:
      labels:
        app: mysql-slave
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values: 
                    - mysql-master
              topologyKey: "kubernetes.io/hostname"
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - mysql-slave
              topologyKey: kubernetes.io/hostname
      containers:
      - name: mysql-ha
        imagePullPolicy: IfNotPresent
        image: daocloud.io/daocloud/mysql-ha
        resources:
          requests:
            memory: "100Mi"
        ports:
        - containerPort: 3306
          name: mysql-all
